--- a/styles/main.css
+++ b/styles/main.css
@@ -690,6 +690,9 @@ ____________________________________________________________________
     @media (min-width: 800px) {
       .project-container .active .description {
         font-size: 0.6em; } }
+    @media (max-width: 1100px) {
+      .project-container .active .description {
+        max-width: 200px; } }
   @media (min-width: 800px) {
     .project-container .active h4 {
       font-size: 1.5em; } }
